<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".pending.PendingDialog">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.jim.moviecritics.pending.PendingViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<!--        android:onClick="@{() -> viewModel.leave()}"-->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_pending"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/layout_pending_bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/text_pending_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@{viewModel.movie.title}"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Movie Title" />

            <TextView
                android:id="@+id/text_pending_released"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@{viewModel.movie.released.substring(0, 4)}"
                android:textAlignment="center"
                android:textColor="#424242"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_pending_title"
                tools:text="Released Year" />

            <View
                android:id="@+id/divider1_pending"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_pending_released" />

            <ToggleButton
                android:id="@+id/toggle_pending_watch"
                android:layout_width="90dp"
                android:layout_height="80dp"
                android:layout_marginStart="16dp"
                android:checked="@{viewModel.isWatch}"
                android:drawableTop="@drawable/ic_watch_selector"
                android:includeFontPadding="false"
                android:onClick="@{() -> viewModel.onClickWatch(viewModel.movie.imdbID, viewModel.user.id)}"
                android:textColor="#455A64"
                android:textOff="@string/toggle_pending_watch_off"
                android:textOn="@string/toggle_pending_watch_on"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/toggle_pending_like"
                app:layout_constraintEnd_toStartOf="@+id/toggle_pending_like"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/toggle_pending_like" />
            <!--            android:checked="true"-->
            <!--            android:clickable="false"-->

            <ToggleButton
                android:id="@+id/toggle_pending_like"
                android:layout_width="90dp"
                android:layout_height="80dp"
                android:layout_marginTop="8dp"
                android:checked="@{viewModel.isLike}"
                android:drawableTop="@drawable/ic_favorite_selector"
                android:includeFontPadding="false"
                android:onClick="@{() -> viewModel.onClickLike(viewModel.movie.imdbID, viewModel.user.id)}"
                android:textColor="#455A64"
                android:textOff="@string/toggle_pending_like_off"
                android:textOn="@string/toggle_pending_like_on"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@+id/toggle_pending_watchlist"
                app:layout_constraintStart_toEndOf="@+id/toggle_pending_watch"
                app:layout_constraintTop_toBottomOf="@+id/divider1_pending" />

            <ToggleButton
                android:id="@+id/toggle_pending_watchlist"
                android:layout_width="90dp"
                android:layout_height="80dp"
                android:layout_marginEnd="16dp"
                android:checked="@{viewModel.isWatchList}"
                android:drawableTop="@drawable/ic_watchlist_selector"
                android:includeFontPadding="false"
                android:onClick="@{() -> viewModel.onClickWatchList()}"
                android:textColor="#455A64"
                android:textOff="@string/toggle_pending_watchlist_off"
                android:textOn="@string/toggle_pending_watchlist_on"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/toggle_pending_like"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/toggle_pending_like"
                app:layout_constraintTop_toTopOf="@+id/toggle_pending_like" />

            <View
                android:id="@+id/divider2_pending"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toggle_pending_like" />

            <TextView
                android:id="@+id/text_pending_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/text_pending_rate"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider2_pending" />

            <TextView
                android:id="@+id/text_pending_leisure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:text="@string/text_pending_leisure"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/ratingBar_pending_leisure"
                app:layout_constraintEnd_toStartOf="@+id/ratingBar_pending_leisure"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/ratingBar_pending_leisure" />

            <RatingBar
                android:id="@+id/ratingBar_pending_leisure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/ratingBar_pending_leisure"
                android:numStars="5"
                android:rating="@={viewModel.leisurePending}"
                android:stepSize="0.5"
                android:scaleX=".6"
                android:scaleY=".6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_pending_rate" />
            <!--            style="@style/Widget.AppCompat.RatingBar.Small"-->

            <TextView
                android:id="@+id/text_pending_hit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:text="@string/text_pending_hit"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/ratingBar_pending_hit"
                app:layout_constraintEnd_toStartOf="@+id/ratingBar_pending_hit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ratingBar_pending_leisure" />

            <RatingBar
                android:id="@+id/ratingBar_pending_hit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/ratingBar_pending_hit"
                android:numStars="5"
                android:rating="@={viewModel.hitPending}"
                android:stepSize="0.5"
                android:scaleX=".6"
                android:scaleY=".6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ratingBar_pending_leisure" />
            <!--            android:rating="@{viewModel.hitPending}"-->
            <!--            android:value="@{viewModel.hitPending}"-->
            <!--            ratingValue="@{viewModel.hitPending}"-->

            <TextView
                android:id="@+id/text_pending_cast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:text="@string/text_pending_cast"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/ratingBar_pending_cast"
                app:layout_constraintEnd_toStartOf="@+id/ratingBar_pending_cast"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ratingBar_pending_hit" />

            <RatingBar
                android:id="@+id/ratingBar_pending_cast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/ratingBar_pending_cast"
                android:numStars="5"
                android:rating="@={viewModel.castPending}"
                android:stepSize="0.5"
                android:scaleX=".6"
                android:scaleY=".6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ratingBar_pending_hit" />

            <TextView
                android:id="@+id/text_pending_music"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:text="@string/text_pending_music"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/ratingBar_pending_music"
                app:layout_constraintEnd_toStartOf="@+id/ratingBar_pending_music"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ratingBar_pending_cast" />

            <RatingBar
                android:id="@+id/ratingBar_pending_music"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/ratingBar_pending_music"
                android:numStars="5"
                android:rating="@={viewModel.musicPending}"
                android:stepSize="0.5"
                android:scaleX=".6"
                android:scaleY=".6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ratingBar_pending_cast" />

            <TextView
                android:id="@+id/text_pending_story"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:text="@string/text_pending_story"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/ratingBar_pending_story"
                app:layout_constraintEnd_toStartOf="@+id/ratingBar_pending_story"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ratingBar_pending_music" />

            <RatingBar
                android:id="@+id/ratingBar_pending_story"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/ratingBar_pending_story"
                android:numStars="5"
                android:rating="@={viewModel.storyPending}"
                android:stepSize="0.5"
                android:scaleX=".6"
                android:scaleY=".6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ratingBar_pending_music" />

            <View
                android:id="@+id/divider3_pending"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ratingBar_pending_story" />

            <TextView
                android:id="@+id/text_pending_review"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:gravity="center_horizontal|center_vertical"
                android:onClick="@{() -> viewModel.navigateToReview(viewModel.movie)}"
                android:text="@string/text_pending_review"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider3_pending" />

            <View
                android:id="@+id/divider4_pending"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_pending_review" />

            <TextView
                android:id="@+id/text_pending_share"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/text_pending_share"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider4_pending" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_pending_bottom"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="#FFC107"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <View
                android:id="@+id/divider5_pending"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/layout_pending_bottom" />

            <TextView
                android:id="@+id/text_pending_done"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/green_708c82"
                android:gravity="center_horizontal|center_vertical"
                android:onClick="@{() -> viewModel.leave()}"
                android:text="@string/text_pending_done"
                android:textColor="#263238"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>