<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="find"
            type="com.jim.moviecritics.data.Find" />
        <variable
            name="watch"
            type="com.jim.moviecritics.data.Watch" />
        <variable
            name="viewModel"
            type="com.jim.moviecritics.watchlist.WatchlistViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_watchlist_poster"
            android:layout_width="90dp"
            android:layout_height="110dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/image_watchlist_poster"
            android:scaleType="centerCrop"
            app:imageUrl="@{viewModel.movieMap[watch.imdbID].posterUri}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/text_watchlist_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:lines="2"
            android:maxLines="3"
            android:text="@{viewModel.movieMap[watch.imdbID].title}"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_watchlist_poster"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Movie Title" />

        <TextView
            android:id="@+id/text_watchlist_expiration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/text_watchlist_expiration"
            android:textColor="#37474F"
            app:layout_constraintStart_toEndOf="@+id/image_watchlist_poster"
            app:layout_constraintTop_toBottomOf="@+id/text_watchlist_title"
            tools:text="Expiration Date" />

        <TextView
            android:id="@+id/text_watchlist_expiration_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text=""
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/image_watchlist_poster"
            app:layout_constraintTop_toBottomOf="@+id/text_watchlist_expiration"
            tools:text="2022-08-08" />

        <ToggleButton
            android:id="@+id/toggle_watchlist_calendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:backgroundTintMode="add"
            android:drawableStart="@drawable/ic_calendar_selector"
            android:includeFontPadding="false"
            android:textColor="#455A64"
            android:textOff="@string/toggle_watchlist_calendar_off"
            android:textOn="@string/toggle_watchlist_calendar_on"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_watchlist_title" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_watchlist_item_calendar"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintEnd_toStartOf="@+id/toggle_watchlist_calendar"
            app:layout_constraintBottom_toBottomOf="parent">
            <ImageView
                android:id="@+id/image_watchlist_item_calendar"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/image_pending_watch"
                android:src="@{watch.expiration == null ? @drawable/ic_calendar_selected : @drawable/ic_calendar}"
                app:layout_constraintBottom_toTopOf="@+id/text_watchlist_item_calendar"
                app:layout_constraintEnd_toEndOf="@+id/layout_watchlist_item_calendar"
                app:layout_constraintStart_toStartOf="@+id/layout_watchlist_item_calendar"
                app:layout_constraintTop_toTopOf="@+id/layout_watchlist_item_calendar"
                app:tint="@{watch.expiration == null ? @color/primary : @color/gray_708090}" />

            <TextView
                android:id="@+id/text_watchlist_item_calendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{watch.expiration == null ? @string/toggle_watchlist_calendar_on : @string/toggle_watchlist_calendar_off}"
                android:textAlignment="center"
                android:textColor="#455A64"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/layout_watchlist_item_calendar"
                app:layout_constraintEnd_toEndOf="@+id/layout_watchlist_item_calendar"
                app:layout_constraintStart_toStartOf="@+id/layout_watchlist_item_calendar"
                tools:text="Watch" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
